<resources>
    <string name="api_key">300edfebf6c620fdf7166e06f2b0af8a</string>

    <string name="api_key_youtube">AIzaSyC7u0ugt14Ak_qkbVLC22wEK-xic8eW5Aw</string>


    <string name="app_name">THE MOVIE APP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="double_click_to_exit">Please click BACK again to exit</string>
    <string name="mark_as_favorite">MARK AS FAVORITE</string>
    <string name="trailers">Trailers</string>

    <string name="popular">POPULAR</string>
    <string name="top">TOP</string>
    <string name="favorite">FAVORITE</string>


    <string name="check_internet">Please check your internet connection state</string>
    <string name="top_filter">top_rated?</string>
    <string name="popular_filter">popular?</string>
    <string name="favorite_filter">favorite</string>
    <string name="base_url">http://api.themoviedb.org/3/movie/</string>
    <string name="url_icon">https://image.tmdb.org/t/p/w500/</string>
    <string name="minute">\t min</string>
    <string name="player">"Player "</string>
    <string name="you_have_move">You have it move in favorite</string>
    <string name="added_move">This move added in your favorite</string>
</resources>
