<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.aleksandrp.weatherthreecities.MainActivity">

    <group android:id="@+id/group_menu">
        <item
            android:id="@+id/popular_menu"
            android:orderInCategory="100"
            android:title="@string/popular"
            app:showAsAction="never"/>

        <item
            android:id="@+id/rop_menu"
            android:orderInCategory="200"
            android:title="@string/top"
            app:showAsAction="never"/>

        <item
            android:id="@+id/favorit_menu"
            android:orderInCategory="300"
            android:title="@string/favorite"
            app:showAsAction="never"/>
    </group>
</menu>
