<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".fragment.ShowMovieFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/rl_title"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/color__card_movie"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:gravity="center_vertical"
                    android:text="@string/hello_blank_fragment"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title_size"/>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_title"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:id="@+id/ll_body_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_movie_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/activity_horizontal_margin">

                        <TextView
                            android:id="@+id/tv_year"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/title_size"/>

                        <TextView
                            android:id="@+id/tv_duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/activity_horizontal_margin"
                            android:textSize="@dimen/duration_size"/>

                        <TextView
                            android:id="@+id/tv_raiting"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/duration_size"
                            android:layout_marginTop="@dimen/activity_horizontal_margin"/>

                        <Button
                            android:id="@+id/bt_favorite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/activity_horizontal_margin"
                            android:background="@color/color__favorite"
                            android:text="@string/mark_as_favorite"/>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_body_movie"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/cardview_default_elevation"
                    android:layout_below="@+id/tv_description"
                    android:background="@color/cardview_shadow_end_color"/>

                <TextView
                    android:id="@+id/tv_trailers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_description"
                    android:layout_marginTop="@dimen/cardview_default_elevation"
                    android:textSize="@dimen/duration_size"
                    android:text="@string/trailers"/>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tv_trailers">

                    <ListView
                        android:id="@+id/lv_players"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </ScrollView>

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
